feat: Using Flaway as a migration tool and Java 24